--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^4.1.0"
   }
 }
