--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "expect": "^21.2.1",
+    "mocha": "^4.0.1",
+    "sinon": "^4.1.0",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^4.1.0"
